@@ -1,3 +1,10 @@
+- handle new drivers: 
+  o ethernet: cpmac
+  o gigabit: ipg
+  o pata/sata: pata_bf54x, sata_fsl
+  o sound: snd-at73c213 
+  o tv cards: cx23885
+  o webcams: tcm825x
 - detect raid partitions based on either type 0xfd or vol_id detecting
   linux_raid_member (#35684)
 - bootloader-config:
